# wooflang

./: .gitignore  LICENSE  README.md  pyproject.toml
src/wooflang/: __main__.py  main.py
